--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 android-minSdk = "24"
 android-compileSdk = "34"
 android-targetSdk = "34"
+iconsaxAndroid = "1.0.0"
 kotlinCompilerExtensionVersion = "1.5.14"
 jvmTarget = "17"
 
@@ -10,25 +11,26 @@ versionName = "1.0.0"
 
 # view kotlin and compose multiplatform compatibility here:
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-compatibility-and-versioning.html#kotlin-compatibility
-kotlin = "2.0.0"
-compose-multiplatform = "1.6.11"
+kotlin = "2.0.21"
+compose-multiplatform = "1.7.0"
 
 agp = "8.4.2"
 
 # view kotlin ksp version here: https://github.com/google/ksp/releases
-ksp = "2.0.0-1.0.21"
+ksp = "2.0.20-1.0.25"
 
 # Libraries in alpha or beta
-lifecycle-compose = "2.8.0"
+lifecycle-compose = "2.8.3"
 navigation-compose = "2.8.0-alpha02"
 room = "2.7.0-alpha05"
 sqlite = "2.5.0-alpha05"
 coil3 = "3.0.0-alpha06"
+camera-mlkit-vision = "1.4.1"
 
 android-splashscreen = "1.0.1"
 androidx-appcompat = "1.7.0"
-androidx-activity-compose = "1.9.0"
-compose-uitooling = "1.6.8"
+androidx-activity-compose = "1.9.3"
+compose-uitooling = "1.7.6"
 data-store = "1.1.1"
 ktor = "2.3.11"
 koin = "3.5.4"
@@ -48,7 +50,8 @@ compose-icons = "1.1.0"
 junit = "4.13.2"
 androidx-test-junit = "1.2.1"
 androidx-espresso-core = "3.6.1"
-lifecycleLivedataCoreKtx = "2.8.2"
+camera-core = "1.4.1"
+mlkit-text-recognition = "19.0.1"
 
 [libraries]
 # Androidx
@@ -57,7 +60,15 @@ androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "a
 androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
 androidx-compose-uitooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-uitooling" }
 
+# Camera Android
+androidx-camera-lifecycle = { group = "androidx.camera", name = "camera-lifecycle", version.ref = "camera-core" }
+androidx-camera-camera2 = { module = "androidx.camera:camera-camera2", version.ref = "camera-core" }
+play-services-mlkit-text-recognition = { module = "com.google.android.gms:play-services-mlkit-text-recognition", version.ref = "mlkit-text-recognition" }
+androidx-camera-view = { module = "androidx.camera:camera-view", version.ref = "camera-core" }
+androidx-camera-mlkit-vision = { module = "androidx.camera:camera-mlkit-vision", version.ref = "camera-mlkit-vision" }
+
 # Kotlinx
+iconsax-android = { module = "io.github.being-eyram:iconsax-android", version.ref = "iconsaxAndroid" }
 kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinx-coroutines" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
@@ -123,7 +134,6 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
 kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
 compose-gradlePlugin = { module = "org.jetbrains.compose:org.jetbrains.compose.gradle.plugin", version.ref = "compose-multiplatform" }
-androidx-lifecycle-livedata-core-ktx = { group = "androidx.lifecycle", name = "lifecycle-livedata-core-ktx", version.ref = "lifecycleLivedataCoreKtx" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
