--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,7 +12,7 @@ versionName = "1.0.0"
 # view kotlin and compose multiplatform compatibility here:
 # https://www.jetbrains.com/help/kotlin-multiplatform-dev/compose-compatibility-and-versioning.html#kotlin-compatibility
 kotlin = "2.0.21"
-compose-multiplatform = "1.6.11"
+compose-multiplatform = "1.7.3"
 
 agp = "8.4.2"
 
@@ -24,7 +24,7 @@ lifecycle-compose = "2.8.3"
 navigation-compose = "2.8.0-alpha02"
 room = "2.7.0-alpha08"
 sqlite = "2.5.0-alpha07"
-coil3 = "3.0.0-alpha06"
+coil3 = "3.0.0"
 camera-mlkit-vision = "1.4.1"
 
 android-splashscreen = "1.0.1"
@@ -37,11 +37,11 @@ data-store = "1.1.1"
 ktor = "2.3.11"
 koin = "3.5.4"
 koin-compose = "1.1.3"
-kotlinx-coroutines = "1.8.1"
+kotlinx-coroutines = "1.9.0"
 kotlinx-serialization = "1.6.3"
 kotlinx-datetime = "0.6.0"
 skie = "0.8.4"
-okio = "3.9.0"
+okio = "3.9.1"
 paging-compose = "3.3.0-alpha02-0.5.1"
 
 napier = "2.7.1"
