Add about app screen in settings

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,3 +21,5 @@ android.nonTransitiveRClass=true
 
 api-key=a87cdc74-b2c4-472a-bdb2-b35c0dc6c796:fx
 deepl-cloud-url=https://api-free.deepl.com
+telegram-contact=@joseeeph_04
+email-contact=planetapluton888@gmail.com
